--- a/submissions/olek557/html-form/index.html
+++ b/submissions/olek557/html-form/index.html
@@ -422,13 +422,13 @@
           </div>
           <footer class="card__footer">
             <div class="input-row input-row--reverse">
-              <label class="checkbox">
-                <input type="checkbox" class="checkbox__input" required>
-                <span class="checkbox__name">
+              <div class="checkbox">
+                <input type="checkbox" class="checkbox__input" id="term-and-condition" required>
+                <label class="checkbox__name" for="term-and-condition">
                   I agree to the 
-                  <a href="/" class="link link--inline" target="_blink">Terms & Conditions</a> 
-                </span>
-              </label>
+                </label>
+                <a href="/" class="link link--inline" target="_blink">Terms & Conditions</a>
+              </div>
               <input
                 type="submit"
                 class="btn btn--medium btn--primary"
